REFACTOR: resume styles

--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -59,15 +59,15 @@
   .resume-a-bit-about-me-sidebar
     @apply bg-blue-400 p-2 pb-8 -mt-2 rounded-lg
     h2
-      @apply text-xl text-blue-900
+      @apply text-xl text-blue-900 ml-2
     p
-      @apply text-blue-800 text-base px-1 pt-1
+      @apply text-blue-800 text-base px-1 pt-1 ml-2
 
   .resume-education-sidebar
     // background-color: #607B9B
     @apply bg-blue-900 text-white rounded-lg -mt-3 px-4 pt-1 pb-4
     ul
-      @apply -ml-10
+      @apply
     h2
       @apply text-blue-100 mb-2
     h4
@@ -81,7 +81,7 @@
     h2
       @apply text-2xl text-blue-300
     li
-      @apply list-none -ml-10 leading-loose
+      @apply list-none leading-loose
   @screen sm
     @apply w-64
 
@@ -135,7 +135,7 @@
 
 .resume-experience-section
   // @include make-col(9)
-  @apply p-4 text-base w-full
+  @apply p-4 text-base w-full bg-blue-100
 
 
   .resume-job-experiences
