--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -7,26 +7,28 @@
   @screen sm
     @apply -mt-10 -mx-6
   .mast-header-text
-    @apply  p-24 text-blue-700 m-12
+    @apply  p-24 text-blue-800 m-12
 
 .intro-lead-in
-  @apply font-sans text-5xl font-bold
+  @apply font-sans text-5xl font-bold text-blue-700
 
 .intro-heading
-  @apply font-serif text-4xl italic leading-loose text-blue-500
+  @apply font-serif text-4xl italic leading-loose text-blue-600
 
 .intro-text
-  @apply text-gray-900 mt-12
+  @apply text-blue-900 mt-12 font-light
   p
-    @apply text-xl
-    @apply my-4 text-2xl
+    @apply my-4 text-lg
+  @screen sm
+    p
+      @apply text-xl
 
 .intro-call-to-action
   @apply mt-6
   a
-    @apply px-6 py-2 rounded-full bg-yellow-600 text-2xl text-gray-700 no-underline
+    @apply px-6 py-2 rounded-full bg-yellow-600 text-2xl text-blue-800 no-underline
     &:hover
-      @apply text-blue-500 no-underline bg-yellow-400
+      @apply text-blue-600 no-underline bg-yellow-500
 
 .roles
   @apply text-center
@@ -41,22 +43,11 @@
     @apply text-2xl
 
 .skill-items
-  @apply flex flex-wrap  content-center self-center justify-between
+  @apply flex flex-wrap
 
   .skill-item
-    @apply text-base text-blue-900 text-center w-full bg-blue-400 p-3 border-8 border-white rounded
-
-  @screen sm
-    @apply text-base
-    .skill-item
-      @apply w-1/2 text-base
-
-  @screen md
-    @apply text-base
-    .skill-item
-      @apply w-1/3  text-base text-xl
-
-  @screen lg
-    @apply text-base
-    .skill-item
-      @apply w-1/3
+    @apply text-base text-blue-900 text-center bg-blue-200 p-2 rounded-lg w-full m-1
+    @screen sm
+      @apply w-1/2 m-0 border-4 border-white
+    @screen md
+      @apply  w-1/3
