--- a/app/views/resume/_employment.html.haml
+++ b/app/views/resume/_employment.html.haml
@@ -8,7 +8,7 @@
 .resume-employment-dates September 2015 - Present
 .resume-job-location Ann Arbor, MI
 
-I developed and manage The University of Michigan's classroom management system. Most of my work has been in full-stack web development (Ruby on Rails, Javascript/jQuery, HTML5, CSS/SASS). In addition to designing and building web applications, I have worked on server-side support for the core infrastructure on which it resides.
+%p I developed and manage The University of Michigan's classroom management system. Most of my work has been in full-stack web development (Ruby on Rails, Javascript/jQuery, HTML5, CSS/SASS). In addition to designing and building web applications, I have worked on server-side support for the core infrastructure on which it resides.
 %ul.resume-job-experiences
   %li Participate in product and team based planning to help develop and drive the product roadmap for web applications for College of LSA
   %li Design and develop web applications for College of LSA.
