--- a/app/views/resume/index.html.haml
+++ b/app/views/resume/index.html.haml
@@ -1,5 +1,5 @@
 .resume-container
-  %header.resume-header
+  .resume-header
     .resume-contact
       .resume-name
         %h2= link_to('David Chmura', root_path)
