--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -1,7 +1,7 @@
 @import 'variables'
 
 .resume-container
-  @apply flex flex-col mt-3
+  @apply flex flex-col mt-3 -mx-6
 
 .resume-header
   @apply  border-white border-b-4 rounded-lg bg-no-repeat bg-cover bg-right z-0
@@ -153,7 +153,7 @@
   margin-right: 1rem
 
 .resume-experience-section
-  @apply p-4 text-base w-full bg-blue-200 rounded-lg mt-2 text-blue-900
+  @apply p-4 text-base w-full bg-white rounded-lg mt-2 text-blue-900
   .resume-job-experiences
     @apply text-blue-900
     li
