--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -41,14 +41,12 @@
       @apply text-xl italic font-serif
 
 .resume
-  @apply flex flex-col-reverse text-red-500
+  @apply flex
   h2
     @apply text-gray-900 font-medium font-serif italic
-  @screen sm
-    @apply flex-row
 
 .resume-sidebar
-  @apply  mr-2 my-3 w-full
+  @apply  mr-2 my-3
   p
     @apply text-base
   h3
