--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,4 @@
-%header
+%header.header
   = link_to root_path do
     / = image_tag(asset_pack_path('davechmura_website/images/DavePics/hug.jpg'), alt: "#{(t :sitename)} Logo, link to home page.", class: 'header-logo ')
     = image_tag(asset_pack_path('media/davechmura_website/images/DavePics/hug.jpg'), alt: "#{(t :sitename)} Logo, link to home page.", class: 'header-logo ')
